tests/models/struct/named/bool/fail/le.stderr
error: Support condition is alias, default and validate
 --> tests/models/struct/named/bool/fail/le.rs:5:5
  |
5 |     value: bool,
  |     ^^^^^
